fix: исправить BCrypt префикс, длину ENCRYPTION_KEY, @Data на entity, добавить @MockBean в тесты
